# sem03-diff-eq-lab-003

./: .gitignore  README.md  pyproject.toml
src/: defs.py  main.py
src/modes/: dir_map.py  trajectories_compare.py  trajectories_map.py
